<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivCardLogo"
                    android:layout_width="39dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/description_card_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_logo_mastercard" />

                <TextView
                    android:id="@+id/tvCardNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="28dp"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/ivCardLogo"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="4455 1223 3488 1000" />

                <ImageView
                    android:id="@+id/ivUserLogo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="33dp"
                    android:contentDescription="@string/description_profile_logo"
                    android:src="@drawable/ic_logo_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivCardLogo" />

                <TextView
                    android:id="@+id/tvCardholderName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="32dp"
                    android:textColor="@color/grey"
                    android:textSize="17sp"
                    app:layout_constraintStart_toEndOf="@id/ivUserLogo"
                    app:layout_constraintTop_toBottomOf="@id/tvCardNumber"
                    tools:text="Anton Ivanov" />

                <TextView
                    android:id="@+id/tvThruLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="22sp"
                    android:text="@string/valid_thru"
                    android:textColor="@color/grey"
                    android:textSize="8sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCardNumber" />

                <TextView
                    android:id="@+id/tvValid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="@id/tvThruLabel"
                    app:layout_constraintStart_toStartOf="@id/tvThruLabel"
                    app:layout_constraintTop_toBottomOf="@id/tvThruLabel"
                    tools:text="12/22" />

                <TextView
                    android:id="@+id/tvConvertedBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="37dp"
                    android:layout_marginBottom="37dp"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCardholderName"
                    tools:text="£2 125,12" />

                <TextView
                    android:id="@+id/tvYourBalanceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="22dp"
                    android:text="@string/label_your_balance"
                    android:textColor="@color/grey"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvValid" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="46dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/tvYourBalanceLabel"
                    app:layout_constraintStart_toStartOf="@id/tvYourBalanceLabel"
                    app:layout_constraintTop_toBottomOf="@id/tvYourBalanceLabel"
                    tools:text="$2 617.14" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvChangeCurrencyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/label_change_currency"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvCard" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvButtonGBP"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            app:cardCornerRadius="16dp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toStartOf="@id/cvButtonEUR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvChangeCurrencyLabel">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvGBPLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/char_gbp"
                    android:textColor="@color/grey"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvGBPLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="17dp"
                    android:text="@string/label_gbp"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvGBPLogo" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvButtonEUR"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            app:cardCornerRadius="16dp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toStartOf="@id/cvButtonRUB"
            app:layout_constraintStart_toEndOf="@id/cvButtonGBP"
            app:layout_constraintTop_toTopOf="@id/cvButtonGBP">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvEURLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/char_eur"
                    android:textColor="@color/grey"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvEURLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="17dp"
                    android:text="@string/label_eur"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEURLogo" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvButtonRUB"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="16dp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvButtonEUR"
            app:layout_constraintTop_toTopOf="@id/cvButtonEUR">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvRUBLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/char_rub"
                    android:textColor="@color/grey"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvRUBLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="17dp"
                    android:text="@string/label_rub"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvRUBLogo" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvButtonGBP"
            app:layout_goneMarginEnd="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tvHistoryLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_history"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTransactionHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvHistoryLabel"
                    tools:listitem="@layout/transaction_item" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>